[package]
name = "gb"
version = "0.1.2"
edition = "2021"

[[bin]]
name = "gb"
path = "src/main.rs"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
colored = "2.1.0"
git2 = "0.19.0"
openssl = { version = "0.10.68", features = ["vendored"] }
regex = "1.11.1"

[profile.dev]
debug = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
